payment gateway and printed money receipt added

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SSLCZ_STORE_ID=xcv67cd366a3875f
+SSLCZ_STORE_PASSWORD=xcv67cd366a3875f@ssl
+SSLCZ_TESTMODE=true
+IS_LOCALHOST=true
